<resources>
    <string name="app_name">FemCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About Us</string>
    <string name="menu_diet">Diet</string>
    <string name="menu_exercise">Exercise</string>
    <string name="menu_share">Share</string>
    <string name="menu_firstaid">First Aid</string>
</resources>
