<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_diet"
            android:icon="@drawable/ic_menu_diet"
            android:title="@string/menu_diet" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_menu_exercise"
            android:title="@string/menu_exercise" />
    </group>

    <item android:title="Add-ons">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_firstaid"
                android:icon="@drawable/ic_menu_firstaid"
                android:title="@string/menu_firstaid" />
        </menu>
    </item>

</menu>
