<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.femcare.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.femcare.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_diet"
        android:name="com.example.femcare.ui.diet.DietFragment"
        android:label="@string/menu_diet"
        tools:layout="@layout/fragment_diet" />

    <fragment
        android:id="@+id/nav_exercise"
        android:name="com.example.femcare.ui.exercise.ExerciseFragment"
        android:label="@string/menu_exercise"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.femcare.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_firstaid"
        android:name="com.example.femcare.ui.firstaid.FisrtAidFragment"
        android:label="@string/menu_firstaid"
        tools:layout="@layout/fragment_firstaid" />
</navigation>